--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,58 @@
 {% extends "base.html" %}
 
 {% block content%}
-    <h1>Реджистеринг</h1>
+    <h1>Регистрация</h1>
+    <form action="" method="post">
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.name.label }}<br>
+            {{ form.name(class="form-control", type="text") }}<br>
+            {% for error in form.name.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        <p>
+            {{ form.surname.label }}<br>
+            {{ form.surname(class="form-control", type="text") }}<br>
+            {% for error in form.surname.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        <p>
+            {{ form.email.label }}<br>
+            {{ form.email(class="form-control", type="email") }}<br>
+            {% for error in form.email.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        <p>
+            {{ form.nickname.label }}<br>
+            {{ form.nickname(class="form-control", type="text") }}<br>
+            {% for error in form.nickname.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        <p>
+            {{ form.pass1.label }}<br>
+            {{ form.pass1(class="form-control", type="password") }}<br>
+            {% for error in form.pass1.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        <p>
+            {{ form.pass2.label }}<br>
+            {{ form.pass2(class="form-control", type="password") }}<br>
+            {% for error in form.pass2.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+        <div>{{ message }}</div>
+    </form>
 {% endblock %}
