--- a/templates/index.html
+++ b/templates/index.html
@@ -12,14 +12,14 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/elegant-icons.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/nice-select.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/style.css" type="text/css">
 </head>
 
 <body>
@@ -31,17 +31,17 @@
     <header class="header-section">
         <div class="container-fluid">
             <div class="logo">
-                <a href="./index.html">
-                    <img src="img/logo.png" alt="">
+                <a href="./index">
+                    <img src="/static/img/logo.png" alt="">
                 </a>
             </div>
             <div class="container">
                 <div class="nav-menu">
                     <nav class="mainmenu mobile-menu">
                         <ul>
-                            <li class="active"><a href="./index.html">Home</a></li>
-                            <li><a href="./about-us.html">About us</a></li>
-                        <ul>
+                            <li class="active"><a href="./index">Home</a></li>
+                            <li><a href="./about_us">About us</a></li>
+                        </ul>
                     </nav>
                 </div>
             </div>
@@ -51,7 +51,7 @@
 
     <section class="hero-section">
         <div class="hero-items owl-carousel">
-            <div class="single-hero-item set-bg" data-setbg="img/main-background/main1.png">
+            <div class="single-hero-item set-bg" data-setbg="/static/img/main-background/main1.png">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
@@ -64,7 +64,6 @@
                     </div>
                 </div>
             </div>
-            </div>
         </div>
     </section>
 
@@ -72,19 +71,19 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="feature-item set-bg" data-setbg="img/description/desc1.jpg">
+                    <div class="feature-item set-bg" data-setbg="/static/img/description/desc1.jpg">
                         <h3>Удобный интерфейс</h3>
                         <p>Простой и понятный каждому<br /> Да, это действительно удобно!</p>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="feature-item set-bg" data-setbg="img/description/desc2.jpg">
+                    <div class="feature-item set-bg" data-setbg="/static/img/description/desc2.jpg">
                         <h3>Работа с текстом</h3>
                         <p>Гибкое форматирование ваших записей<br /> Прояви свою креативность на полную!</p>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="feature-item set-bg" data-setbg="img/description/desc3.jpg">
+                    <div class="feature-item set-bg" data-setbg="/static/img/description/desc3.jpg">
                         <h3>Встроенный GPT</h3>
                         <p>Записывайте все самое необходимое грамотно и красиво<br /> Грамотный текст всегда приятнее
                             читать!</p>
@@ -99,11 +98,11 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="about-text">
-                        <div class="feature-item set-bg" data-setbg="img/welcome.jpg">
+                        <div class="feature-item set-bg" data-setbg="/static/img/welcome.jpg">
                             <h2>Добро пожаловать</h2>
                             <p class="short-details">Онлайн блокнот самая недооцененная вещь, которую все обходят стороной
                             </p>
-                            <p class="long-details">YALM Notebook - это мощное инструмент для креативного писательства,
+                            <p class="long-details">YALM Notebook - это мощный инструмент для креативного писательства,
                                 планирования и организации идей. Благодаря технологии GPT вы сможете получить идеи для
                                 написания текстов, ответы на вопросы, а также помощь в формулировании идей. <br />
 
@@ -116,17 +115,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="163-index">
-                        <img src="pass-163-index.jpg" alt="">
-                    </div>
-                </div>
             </div>
         </div>
     </section>
 
     <section class="classes-section">
-        <div class="class-title set-bg" data-setbg="img/classes-title-bg.jpg">
+        <div class="class-title set-bg" data-setbg="/static/img/classes-title-bg.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 m-auto text-center">
@@ -141,21 +135,21 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-3 col-sm-6">
-                    <div class="classes-item set-bg" data-setbg="img/classes/class-1.jpg">
+                    <div class="classes-item set-bg" data-setbg="/static/img/classes/class-1.jpg">
                         <h4>Приватные папки и заметки</h4>
                         <p>Организовывайте свои записи и защищайте их паролем</p>
                         <a href="#" class="primary-btn class-btn">Read More</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
-                    <div class="classes-item set-bg" data-setbg="img/classes/class-2.jpg">
+                    <div class="classes-item set-bg" data-setbg="/static/img/classes/class-2.jpg">
                         <h4>Форматирование заметок</h4>
                         <p>Вставляйте изображения, геопозицию мест, таблицы и изменяйте стиль текста</p>
                         <a href="#" class="primary-btn class-btn">Read More</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
-                    <div class="classes-item set-bg" data-setbg="img/classes/class-3.jpg">
+                    <div class="classes-item set-bg" data-setbg="/static/img/classes/class-3.jpg">
                         <h4>Встроенный GPT</h4>
                         <p>Да, это первый онлайн блокнот со встроенной технологией GPT. Наслаждайтесь!</p>
                         <a href="#" class="primary-btn class-btn">Read More</a>
@@ -178,21 +172,21 @@
             <div class="row">
                 <div class="col-lg-4 col-sm-6">
                     <div class="choose-item">
-                        <img src="img/icons/chose-icon-1.png" alt="">
+                        <img src="/static/img/icons/chose-icon-1.png" alt="">
                         <h5>Поддержка 24/7</h5>
                         <p>Пишите в любое время. Ответим, поможем!</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="choose-item">
-                        <img src="img/icons/chose-icon-2.png" alt="">
+                        <img src="/static/img/icons/chose-icon-2.png" alt="">
                         <h5>Наша команда</h5>
                         <p>Продукт разработан тремя учениками Яндекс Лицея: Кирилл, Алексей и Никита.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="choose-item">
-                        <img src="img/icons/chose-icon-3.png" alt="">
+                        <img src="/static/img/icons/chose-icon-3.png" alt="">
                         <h5>Делаем все для вас</h5>
                         <p>Интерфейс разработан для пользователей любого уровня.</p>
                     </div>
@@ -208,8 +202,8 @@
                     <div class="cta-text">
                         <h3>Начни прямо сейчас</h3>
                     </div>
-                    <a href="#" class="primary-btn cta-btn">Sign in</a>
-                    <a href="#" class="primary-btn cta-btn">Sign up</a>
+                    <a href="/login" class="primary-btn cta-btn">Sign in</a>
+                    <a href="/register" class="primary-btn cta-btn">Sign up</a>
                 </div>
             </div>
         </div>
@@ -229,12 +223,12 @@
         </div>
     </div>
 
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/jquery.nice-select.min.js"></script>
-    <script src="js/jquery.slicknav.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/masonry.pkgd.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/static/js/jquery-3.3.1.min.js"></script>
+    <script src="/static/js/jquery.nice-select.min.js"></script>
+    <script src="/static/js/jquery.slicknav.js"></script>
+    <script src="/static/js/owl.carousel.min.js"></script>
+    <script src="/static/js/masonry.pkgd.min.js"></script>
+    <script src="/static/js/main.js"></script>
 </body>
 
 </html>
