--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
 
     <section class="hero-section">
         <div class="hero-items owl-carousel">
-            <div class="single-hero-item set-bg" data-setbg="/static/img/main-background/main1.png">
+            <div class="single-hero-item set-bg" data-setbg="/static/img/main1.png">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
@@ -142,16 +142,23 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
-                    <div class="classes-item set-bg" data-setbg="/static/img/classes/class-2.jpg">
+                    <div class="classes-item set-bg" data-setbg="/static/img/classes/class-2.png">
                         <h4>Форматирование заметок</h4>
                         <p>Вставляйте изображения, геопозицию мест, таблицы и изменяйте стиль текста</p>
                         <a href="#" class="primary-btn class-btn">Read More</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
-                    <div class="classes-item set-bg" data-setbg="/static/img/classes/class-3.jpg">
+                    <div class="classes-item set-bg" data-setbg="/static/img/classes/class-3.png">
                         <h4>Встроенный GPT</h4>
                         <p>Да, это первый онлайн блокнот со встроенной технологией GPT. Наслаждайтесь!</p>
+                        <a href="#" class="primary-btn class-btn">Read More</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="classes-item set-bg" data-setbg="/static/img/classes/class-3.png">
+                        <h4>Делитесь заметками</h4>
+                        <p>Пишите свои мысли, планы на день и отправляйте заметки другим людям</p>
                         <a href="#" class="primary-btn class-btn">Read More</a>
                     </div>
                 </div>
