--- a/templates/index.html
+++ b/templates/index.html
@@ -30,17 +30,12 @@
 
     <header class="header-section">
         <div class="container-fluid">
-            <div class="logo">
-                <a href="./index">
-                    <img src="/static/img/logo.png" alt="">
-                </a>
-            </div>
             <div class="container">
                 <div class="nav-menu">
                     <nav class="mainmenu mobile-menu">
                         <ul>
-                            <li class="active"><a href="./index">Home</a></li>
-                            <li><a href="./about_us">About us</a></li>
+                            <li class="active"><a href="./index">Главная</a></li>
+                            <li><a href="./about-us">О нас</a></li>
                         </ul>
                     </nav>
                 </div>
