--- a/templates/main.html
+++ b/templates/main.html
@@ -70,22 +70,24 @@
 						<span class="navbar-item text-md text-ellipsis">Заметки</span>
 					</div>
 				</div>
+
 				<!-- Правая колонка-->
 				<div class="row-row">
 					<div class="row-body scrollable hover">
 						<div class="row-inner"></div>
 				    </div>
 				</div>
+
+				<!-- / кнопка аккаунт-->
+				<div class="p-y text-center">
+					<a href="/account" class="md-btn md-mini md-fab primary"><i class="fa fa-plus"></i></a>
+				</div>
+
 				<!-- / Правая колонка-->
 		    </div>
 		</div>
 		<div class="col-xs w-80" id="sidenav">
 			<div class="row-col bg">
-		      	<!-- Кнопка -->
-			    <div class="p-y text-center">
-			        <a href="#" class="md-btn md-mini md-fab primary"><i class="fa fa-plus"></i></a>
-			    </div>
-			    <!-- Кнопка -->
 		    </div>
 		</div>
 	</div>
