--- a/templates/main.html
+++ b/templates/main.html
@@ -86,10 +86,30 @@
 				<!-- / Правая колонка-->
 		    </div>
 		</div>
+
 		<div class="col-xs w-80" id="sidenav">
-			<div class="row-col bg">
-		    </div>
-		</div>
+					<div class="row-col bg">	
+						<div class="padding">
+							<p>Редактирование</p>
+							<!-- Текст заметки-->
+							<div class="box m-b-md">
+							  <div data-ui-jp="summernote">
+								<p>Пишите здесь...</p>
+							  </div>
+							  <!-- Текст заметки-->
+							</div>
+							<div class="box m-b-md">
+							  <div data-ui-jp="summernote" data-ui-options="{height: 150,
+									  toolbar: [
+										['style', ['bold', 'italic', 'underline', 'clear']],
+										['color', ['color']],
+										['para', ['ul', 'ol', 'paragraph']],
+										['height', ['height']]
+									  ]}">
+							  </div>
+							</div>
+						  </div>
+					</div>
 	</div>
 </div>
 
