Added a simple form for edited text

--- a/templates/main.html
+++ b/templates/main.html
@@ -87,34 +87,14 @@
 		    </div>
 		</div>
 
-		<div class="col-xs w-80" id="sidenav">
-					<div class="row-col bg">	
-						<div class="padding">
-							<p>Редактирование</p>
-							<!-- Текст заметки-->
-							<div class="box m-b-md">
-							  <div data-ui-jp="summernote">
-								<p>Пишите здесь...</p>
-							  </div>
-							  <!-- Текст заметки-->
-							</div>
-							<div class="box m-b-md">
-							  <div data-ui-jp="summernote" data-ui-options="{height: 150,
-									  toolbar: [
-										['style', ['bold', 'italic', 'underline', 'clear']],
-										['color', ['color']],
-										['para', ['ul', 'ol', 'paragraph']],
-										['height', ['height']]
-									  ]}">
-							  </div>
-							</div>
-						  </div>
-					</div>
+		<form>
+			<p><b>Редактирование</b></p>
+			<p><textarea name="comment"></textarea></p>
+		</form>
 	</div>
+
+
 </div>
-
-
-    </div>
   </div>
 
   </div>
