--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,9 @@
     <title>Вход</title>
 </head>
 <body>
+  <center><div>
+    <h1>Вход</h1>
+  </div></center>
   <form name="form" action="/main">
     <div class="form-group">
       <!-- поле ввода ника-->
@@ -17,7 +20,7 @@
       <center><input type="password" class="form-control" placeholder="Password" required></center>
     </div>
       <!-- чекбокс запомнить меня-->
-      <input type="checkbox" id="name_it_yourself">Keep me signed in
+      <center><input type="checkbox" id="name_it_yourself">Keep me signed in</center>
     <!-- кнопка регистрации-->
     <center><input type="submit" value="sign in"/></center>
   </form>
