--- a/templates/register.html
+++ b/templates/register.html
@@ -7,6 +7,9 @@
     <title>Регистрация</title>
 </head>
 <body>
+  <center><div>
+    <h1>Регистрация</h1>
+  </div></center>
   <form name="form" action="/main">
     <div class="form-group">
       <!-- поле ввода ника-->
