--- a/templates/login.html
+++ b/templates/login.html
@@ -13,11 +13,11 @@
   <form name="form" action="/main">
     <div class="form-group">
       <!-- поле ввода ника-->
-      <center><input type="text" class="form-control" placeholder="Username" required></center>
+      <center><input type="text" class="form-control" placeholder="Username" name="nickname" required></center>
     </div>
     <div class="form-group">
       <!-- поле ввода пароля-->
-      <center><input type="password" class="form-control" placeholder="Password" required></center>
+      <center><input type="password" class="form-control" placeholder="Password" name="password" required></center>
     </div>
       <!-- чекбокс запомнить меня-->
       <center><input type="checkbox" id="name_it_yourself">Keep me signed in</center>
