--- a/templates/register.html
+++ b/templates/register.html
@@ -10,18 +10,22 @@
   <center><div>
     <h1>Регистрация</h1>
   </div></center>
-  <form name="form" action="/main">
+  <form name="form" method="POST">
     <div class="form-group">
       <!-- поле ввода ника-->
-      <center><input type="text" class="form-control" placeholder="Username" required></center>
+      <center><input type="text" class="form-control" placeholder="Username" name="nickname" required></center>
     </div>
     <div class="form-group">
       <!-- поле ввода почты-->
-      <center><input type="email" class="form-control" placeholder="Email" required></center>
+      <center><input type="email" class="form-control" placeholder="Email" name="email" required></center>
     </div>
     <div class="form-group">
       <!-- поле ввода пароля-->
-      <center><input type="password" class="form-control" placeholder="Password" required></center>
+      <center><input type="password" class="form-control" placeholder="Password" name="pass_1" required></center>
+    </div>
+    <div class="form-group">
+      <!-- поле ввода пароля-->
+      <center><input type="password" class="form-control" placeholder="Confirmation" name="pass_2" required></center>
     </div>
     <center><div class="m-b-md text-sm">
       <span class="text-muted">By clicking Sign Up, I agree to the</span>
