--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <a href="/login">Вход</a>
     <a href="/register">Регистрация</a>
     <a href="/main">ТЕСТ МЭИН</a>
+    <a href="/account">Аккаунт</a>
 </div>
 
 {% block content %}{% endblock %}
