--- a/templates/register.html
+++ b/templates/register.html
@@ -34,7 +34,7 @@
       <a>Policy Privacy.</a>
     </div></center>
     <!-- кнопка регистрации-->
-    <center><input type="submit" value="register"/></center>
+    <center><input type="submit" class="form-control" value="register"/></center>
   </form>
   <!-- ссылка на страницу входа-->
   <center><div>Already have an account? <a href="/login">Sign in</a></div></center>
