--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
     <!-- чекбокс запомнить меня-->
     <center><input type="checkbox" id="name_it_yourself" name="remember_me">Keep me signed in</center>
     <!-- кнопка регистрации-->
-    <center><input type="submit" value="sign in"/></center>
+    <center><input type="submit" class="form-control" value="sign in"/></center>
     {% if message %}
     <center>
         <h1>{{ message }}</h1>
