added adding notes, folders

--- a/templates/account.html
+++ b/templates/account.html
@@ -31,14 +31,14 @@
                 Username:
             </div>
             <div class="info">
-                {{nickname}}
+                {{current_user.nickname}}
             </div>
             <br>
             <div class="info">
                 Email:
             </div>
             <div class="info">
-                {{email}}
+                {{current_user.email}}
             </div>
         </div>
     </div>
