--- a/templates/main.html
+++ b/templates/main.html
@@ -9,34 +9,35 @@
             <ul class="folders_and_notes">
                 {% for item in list_of_folders %}
                 <li><a href='/load_folder_id/{{item["name"]}}'>
-                        <div class="name">
-                            {{item["name"]}}
-                        </div>
-                    </a></li>
+                    <div class="name">
+                        {{item["name"]}}
+                    </div>
+                </a></li>
                 {%endfor%}
 
             </ul>
-            <input type="submit" value="Добавить папку" />
+            <a href="/add_folder"><input type="submit" value="Добавить папку"/></a>
         </div>
         <div>
             <ul class="folders_and_notes">
                 {% for item in list_of_notes %}
                 <li><a href='/load_note_id/{{item["name"]}}'>
-                        <div class="name">
-                            {{item["content"]}}
-                        </div>
-                    </a></li>
+                    <div class="name">
+                        {{item["name"]}}
+                    </div>
+                </a></li>
                 {%endfor%}
 
             </ul>
-            <input type="submit" value="Добавить заметку" />
+            <a href="/add_note"><input type="submit" value="Добавить заметку"/></a>
         </div>
         <div>
             <h1 style="text-align: center">Редактирование</h1>
-                <form action="/main" method="GET">
-                    <p><textarea id="edit" name="edit_form" type="text" value='{{address or ""}}'></textarea></p>
-                    <input type="submit" value="Сохранить" />
-                </form>
+            <form action="/main" method="POST">
+                <p><textarea id="edit" name="content" type="text"
+                             value='{{address or ""}}'>{{ note_content }}</textarea></p>
+                <input type="submit" value="Сохранить"/>
+            </form>
         </div>
     </div>
 </div>
