--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -7,7 +7,8 @@
 <body>
 <form method="post">
     <h3>Восстановление пароля</h3>
-    <p>Введите почту на которую отправить</p>
+    <p>Введите ник и почту на которую отправить</p>
+    <input type="text" placeholder="nickname" name="nick">
     <input type="email" placeholder="email" name="email">
     <input type="submit" value="Получить код">
 </form>
