Added a style for buttons and func gpt

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/chota@latest">
     <title>mindmerge - {% block title %}{% endblock %}</title>
     {% block headres %}{% endblock %}
 </head>
@@ -12,7 +13,6 @@
     <a href="/" class="main">Главная</a>
     <a href="/login">Вход</a>
     <a href="/register">Регистрация</a>
-    <a href="/main">ТЕСТ МЭИН</a>
     <a href="/account">Аккаунт</a>
 </div>
 
