--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <div id="content">
         <div class="columns">
             <div style="width: 40vw">
-                <h1 style="display: inline; font-size: 4em">MindMerge</h1>
+                <h1 style="display: inline; font-size: 4em">Яндекс.Блокнот</h1>
             </div>
             <div style="width: 40vw">
                 <p><b>Что, зачем, для кого?</b></p>
@@ -42,7 +42,7 @@
                 </p>
             </div>
             <div style="width: 40vw">
-                <h1 style="font-size: 3em;text-align: center">У нас есть GPT для студента!</h1>
+                <h1 style="font-size: 3em;text-align: center">У нас есть GPT!</h1>
             </div>
         </div>
     </div>
