--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <a href="/" class="main">Главная</a>
     <a href="/login">Вход</a>
     <a href="/register">Регистрация</a>
-    <a href="/account">Аккаунт</a>
+    <a href="/main">Редактирование</a>
 </div>
 
 {% block content %}{% endblock %}
