added page forgot_password.html, available sending messages to email

--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -8,8 +8,7 @@
 <form method="post">
     <h3>Восстановление пароля</h3>
     <p>Введите ник и почту на которую отправить</p>
-    <input type="text" placeholder="nickname" name="nick">
-    <input type="email" placeholder="email" name="email">
+    <input type="text" placeholder="nickname" name="nickname">
     <input type="submit" value="Получить код">
 </form>
 </body>
